[package]
name = "rspy-rsi"
version = "0.1.0"
authors = ["Andrew Luchuk <andrew.luchuk@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
rusqlite = "0.25.3"

[lib]
name = "rspy_rsi"
crate-type = ["cdylib"]
